# old-clash-starters

./: README.md  cabal.project  my-clash-project-nul-zeven.cabal  stack.yaml
src/Example/: Project.hs
